<resources>
    <string name="app_name" translatable="false">Mushroom App</string>
    <string name="permission_deny_text">Required permissions denied. Exiting.</string>
    <string name="analysing">Analysing</string>
    <string name="edibility">Edibility</string>
    <string name="edible">Edible</string>
    <string name="inedible">Inedible</string>
    <string name="results">Result</string>
    <string name="couldalsobe">Other possible results:</string>
    <string name="match">Match:</string>
    <string name="agaricus_arvensis_name">Horse mushroom</string>
    <string name="amanita_muscaria_name">Fly amanita</string>
    <string name="amanita_muscaria_desc">Latin: Amanita muscaria.\n\nArguably the most iconic toadstool species, the fly agaric is a large white-gilled, white-spotted, usually red mushroom, and is one of the most recognizable and widely encountered in popular culture.\n\nAlthough poisonous, death due to poisoning from A. muscaria ingestion is quite rare.\n\nParboiling twice with water draining weakens its toxicity and breaks down the mushroom\'s psychoactive substances; it is eaten in parts of Europe, Asia, and North America.\n\nIt has a religious significance in Sami, Siberian, Eurasian and other cultures.\n\nFly agaric fruiting bodies emerge from the soil looking like white eggs.\n\nAfter emerging from the ground, the cap is covered with numerous small white to yellow pyramid-shaped warts.\n\nThese are remnants of the universal veil, a membrane that encloses the entire mushroom when it is still very young.\n\nA. muscaria is illegal to buy, sell, or possess in the Netherlands since December 2008. Possession of amounts larger than 0.5 g dried or 5 g fresh lead to a criminal charge.</string>
    <string name="amanita_pantherina_name">Panther cap</string>
    <string name="amanita_pantherina_desc">Latin: Amanita pantherina\n\nThe panther cap is an uncommon mushroom, found in both deciduous, especially beech and, less frequently, coniferous woodland and rarely meadows throughout Europe, western Asia in late summer and autumn.\n\nThe cap reaches a diameter of 6-10 cm. It is hemispherical, then glazed, flat when aged - with a smooth surface, ocher to dark brown, covered with white spots. The edge is usually ridged. The gills are white, dense, free at the stipe. The white rather slender mandrel carries a narrow smooth ring. The white flesh shows an inconspicuous pleasant aroma and delicate taste. Spore dust is white.\n\nA. pantherina is illegal to buy, sell, or possess in the Netherlands since December 2008. Possession of amounts larger than 0.5 g dried or 5 g fresh lead to a criminal charge.\n</string>
    <string name="amanita_phalloides_name">Death cap</string>
    <string name="amanita_phalloides_desc">Latin: Amanita phalloides\n\nThe large fruiting bodies (mushrooms) appear in summer and autumn; the caps are generally greenish in color with a white stipe and gills. The cap color is variable, including white forms, and is thus not a reliable identifier.\n\n\nThese toxic mushrooms resemble several edible species (most notably Caesar\'s mushroom and the straw mushroom) commonly consumed by humans, increasing the risk of accidental poisoning. Amatoxins, the class of toxins found in these mushrooms, are thermostable: they resist changes due to heat, so their toxic effects are not reduced by cooking.\n\n\nAmanita phalloides is one of the most poisonous of all known mushrooms. It is estimated that as little as half a mushroom contains enough toxin to kill an adult human.\n\n\nIt has been involved in the majority of human deaths from mushroom poisoning,[2] possibly including the deaths of Roman Emperor Claudius in AD 54 and Holy Roman Emperor Charles VI in 1740.\n\n\nIt has been the subject of much research and many of its biologically active agents have been isolated. The principal toxic constituent is α-amanitin, which damages the liver and kidneys, causing liver and kidney failure that can be fatal.\n</string>
    <string name="boletus_reticulatus_edulis_name">Summer cep</string>
    <string name="boletus_reticulatus_edulis_desc">Latin: Boletus reticulatus\n\nIt occurs in deciduous forests of Europe where it forms a symbiotic mycorrhizal relationship with species of oak. The fungus produces fruiting bodies in the summer months which are edible and popularly collected.\n\n\nThe summer cep\'s fruiting body is a mushroom with a swollen bulbous stem, and large convex cap. The cap is round and usually up to 20 centimeters in diameter. It bears a velvety brown, rust to chocolate cuticle which when dry often cracks to reveal the white flesh underneath, giving the appearance of a net.\n\n\nThe flesh is white and thick and remains firm if yellowish as the mushroom ages and is often attacked by insect larvae. Its odor is pleasant.\n\n\nChitin, hemicellulose, and pectin-like carbohydrates—all indigestible by humans—contribute to high proportion of insoluble fiber in B. reticulatus. It also contains more tocopherol than other species of mushroom.\n</string>
    <string name="calocera_viscosa_name">Yellow stagshorn</string>
    <string name="calocera_viscosa_desc">Latin: Calocera viscosa\n\n\nIt has bright orange, yellow or occasionally white branching basidiocarps, which are somewhat gelatinous in texture and slimy to the touch (hence the specific name). It is relatively large for a jelly fungus and can reach up to ten centimeters in height.\n\n\nIt is widespread and common, and its bright color makes it stand out in its habitat. It grows on decaying conifer wood, typically stumps, and roots, although this may not be obvious if the wood is covered in leaf litter. It fruits throughout the year but is most seen in autumn. \n\n\nIt is not poisonous, but its tough gelatinous texture and nondescript taste and odor make it unattractive as a food. However, its striking color has led to it being used as a garnish on occasion.\n</string>
    <string name="cantharellus_cibarius_name">Chanterelle</string>
    <string name="cantharellus_cibarius_desc">Latin: Cantharellus cibarius\n\nIt grows in Europe from Scandinavia to the Mediterranean Basin, mainly in deciduous and coniferous forests. Due to its characteristic color and shape, it is easy to distinguish from mushrooms with potential toxicity that discourage human consumption. \n\n\nA commonly eaten and favored mushroom, the chanterelle is typically harvested from late summer to late fall in its European distribution.\n\n\nChanterelles are used in many culinary dishes and can be preserved by either drying or freezing. An oven should not be used when drying it because can result in the mushroom becoming bitter.\n\n\nThe mushroom is easy to detect and recognize in nature. The body is 3–10 centimeters wide and 5–10 cm tall. The color varies from yellow to dark yellow. Red spots will appear on the cap of the mushroom if it is damaged. Chanterelle mushrooms have a faint aroma and flavor of apricots.\n</string>
    <string name="chlorociboria_aeruginascens_name">Green elfcup</string>
    <string name="chlorociboria_aeruginascens_desc">Latin: Chlorociboria aeruginascens\n\nA saprobic species of mushroom, also commonly known as the green wood cup because of its characteristic small, green, saucer-shaped fruit bodies. Although the actual fruit bodies are infrequently seen, the green staining of wood caused by the fungus is more prevalent.\n\nIt grows on debarked deciduous wood, mostly oak or hazel, especially on the underside. The wood colonized with the species is of greenish tint with mycelium. It is abundant in the northern temperate zone throughout the year.\n</string>
    <string name="cortinarius_semisanguineus_name">Surprise webcap</string>
    <string name="cortinarius_semisanguineus_desc">Latin: Cortinarius semisanguineus\n\nIt is a medium-sized mushroom with a pale brown to ochre cap, and bright blood-red gills. It belongs to the genus Cortinarius, a group collectively known as webcaps. It is found growing in conifer plantations, and has recently been given the fanciful common name of surprise webcap. In the past it has been called the red-gilled webcap.\n\n\nThe cap is bell-shaped, and later flattens. It is usually between 2–8 cm across, brownish ochre, or umber and with a darker centre. It is covered in fine fibrils, and is dry. The stipe is usually the same colour as the cap or paler, and is smooth, or finely fibrillose like the cap.\n\n\nIt is long, slim, and cylindrical. Cortinal remnants often left on the stem in this species can be quite fleeting. The gills are adnate, markedly sinuate, and fairly crowded. They are initially blood-red, but turn cinnamon-brown on aging, giving a spore print of the same colour. The flesh is said to smell of radishes, and it is ochre in the stem, but more olive in the cap.\n\n\nCortinarius semisanguineus appears in conifer, or mixed conifer, and birch woods in autumn (fall). It is occasional in Britain, Europe, Scandinavia, and parts of North America. It has a mycorrhizal relationship with birch trees (Betula), and other coniferous softwood trees. It is often abundant under young spruce in plantations on acid soil, appearing from August to November.\n\n\nIt cannot be recommended for the table as it is suspected of being toxic.\nCortinarius semisanguineus can be used as a dye for textile yarns.\n</string>
    <string name="cortinarius_violaceus_name">Violet webcap</string>
    <string name="acknowledgments">This app would not be possible without these open-source libraries:</string>
    <string name="libs" translatable="false">Fotoapparat, Gson, Tensorflow Lite, AndroidX, Material, Glide</string>
    <string name="special_thanks">Also, special thanks to:</string>
    <string name="advisor">Dr. Giang Nguyen Thu</string>
    <string name="wiki">The information in this application is sourced from Wikipedia articles of each mushroom, under the CC BY-SA license.</string>
    <string name="searchreturn">Analysis could return without any matches for several reasons, including:</string>
    <string name="objectpart">An object isn’t a part of, or similar to, the known set of mushrooms.</string>
    <string name="angle">Photo was taken from an angle the model doesn’t recognize</string>
    <string name="imagequality">Poor image quality, making key details of the mushroom hard to recognize</string>
    <string name="gpuHeadline">GPU inference:</string>
</resources>